--- a/Problem1.ipynb
+++ b/Problem1.ipynb
@@ -120,9 +120,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 315,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     fun: 0.31567457155921386\n",
+       "   maxcv: 0.0\n",
+       " message: 'Maximum number of function evaluations has been exceeded.'\n",
+       "    nfev: 1000\n",
+       "  status: 2\n",
+       " success: False\n",
+       "       x: array([5.93467471, 5.88568726, 6.28145433, 4.64856485, 1.6553404 ,\n",
+       "       4.64556344, 1.56102026, 4.92259821, 3.49523539, 0.16557739,\n",
+       "       0.04351441, 4.02475405, 4.79182638, 4.79805291, 1.43810092,\n",
+       "       0.82368993])"
+      ]
+     },
+     "execution_count": 315,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numQubits = 4\n",
     "numLayers = 4\n",
