--- a/Problem1.ipynb
+++ b/Problem1.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "def addLayer(circ, thetas):\n",
     "    '''\n",
-    "    Ads a layer to the given circuit.\n",
+    "    Adds a layer to the given circuit.\n",
     "    Parameters:\n",
     "        circ - the circuit to add the layers to\n",
     "        thetas - a list of circuit parameters that will hold the rotation angles\n",
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now it's time to run the experiments and look at the results."
+    "Now it's time to run the experiments and look at the results. Depending on the number of qubits, number of tries and the number of layers this can take a long time."
    ]
   },
   {
