--- a/Problem1.ipynb
+++ b/Problem1.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Note: Before you can run this notebook you must install the required libraries by running `pip install -r requirements.txt`"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
